changes name on button

--- a/ant-trail-5.html
+++ b/ant-trail-5.html
@@ -333,7 +333,7 @@
                 <button id="reset">Reset Art</button>
             </div>
             <div class="control">
-                <button id="exportButton">Export JPEG</button>
+                <button id="exportButton">Export</button>
             </div>
         </div>
 
