tidies up control panel somewhat

--- a/ant-trail-5.html
+++ b/ant-trail-5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ant Art Creator</title>
+    <title>Ant Man Beep</title>
     <!-- Add html2canvas library for reliable export -->
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <style>
@@ -308,10 +308,6 @@
 
     <!-- Settings Panel -->
     <div class="settings-panel" id="settingsPanel">
-        <div class="settings-header">
-            <h3>Settings</h3>
-        </div>
-
         <div class="settings-section">
             <h4>Controls</h4>
             <div class="control">
