adds back instant trail color change

--- a/ant-trail-6.html
+++ b/ant-trail-6.html
@@ -336,7 +336,8 @@
         <div class="settings-section">
             <h4>Ant Trail</h4>
             <div class="color-picker-container">
-                <label for="trailColor">Trail Color <input type="color" id="trailColor" value="#000000"></label>
+                <label for="trailColor">Trail Color <span class="color-preview" id="trailColorPreview" style="background-color: black;"></span></label>
+                <input type="color" id="trailColor" value="#000000">
             </div>
         </div>
 
