--- a/space-tanks.html
+++ b/space-tanks.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Space Tank Battle</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/space-tank-battle-icon.png">
+    
+    <!-- Social Media Preview -->
+    <meta property="og:title" content="Space Tank Battle">
+    <meta property="og:description" content="An exciting space tank battle game. Defeat enemy space-tanks and survive as long as you can!">
+    <meta property="og:image" content="images/space-tank-battle.png">
+    <meta property="og:url" content="https://robby3000.github.io/html-fun/space-tanks.html">
+    <meta name="twitter:card" content="summary_large_image">
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <style>
