--- a/space-tanks.html
+++ b/space-tanks.html
@@ -121,8 +121,9 @@
         <div class="control-btn" id="right-btn">→</div>
     </div>
     <div id="start-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; font-size: 36px;">
-        <div>SPACE TANK BATTLE</div>
-        <button id="start-btn" style="margin-top: 20px; padding: 10px 20px; font-size: 24px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">Start Game</button>
+        <h1 style="margin: 0 0 15px 0; font-size: 42px; text-shadow: 0 0 10px #4CAF50;">SPACE TANK BATTLE</h1>
+        <img src="images/space-tank-battle-800.png" alt="Space Tank Battle Preview" style="max-width: 80%; max-height: 40vh; height: auto; border-radius: 5px; margin: 10px 0 20px; border: 2px solid #4CAF50; box-shadow: 0 0 15px rgba(76, 175, 80, 0.5);">
+        <button id="start-btn" style="margin-top: 10px; padding: 10px 30px; font-size: 24px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);">Start Game</button>
         <button id="info-btn-start" style="margin-top: 10px; padding: 5px 15px; font-size: 16px; background: rgba(255,255,255,0.2); color: white; border: none; border-radius: 5px; cursor: pointer;">info</button>
     </div>
     
@@ -135,7 +136,9 @@
     
     <div id="info-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); z-index: 1000; justify-content: center; align-items: center;">
         <div style="background: rgba(50, 50, 80, 0.9); padding: 30px; border-radius: 10px; max-width: 500px; text-align: center; color: white; position: relative;">
-            <p style="font-size: 18px; line-height: 1.6;">Shoot down the enemy spaceships. Keep an eye on your laser cannon count at the top right, you get 2 more shots with every enemy spaceship that spawns. If you get 3 hits you die. Good luck!</p>
+            <h2 style="margin-top: 0; font-size: 24px; margin-bottom: 15px;">SPACE TANK BATTLE</h2>
+            <img src="images/space-tank-battle-2-800.png" alt="Space Tank Battle Preview" style="max-width: 100%; height: auto; border-radius: 5px; margin-bottom: 15px; border: 2px solid #4CAF50; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);">
+            <p style="font-size: 18px; line-height: 1.6; margin-bottom: 20px;">Shoot down the enemy spaceships. Keep an eye on your laser cannon count at the top right, you get 2 more shots with every enemy spaceship that spawns. If you get hit 3 times you die. Good luck!</p>
             <button id="close-modal" style="padding: 5px 15px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; margin-top: 20px;">Close</button>
         </div>
     </div>
