Enhance social media preview with proper Open Graph and Twitter Card meta tags
- Added absolute URL for og:image to ensure cross-platform compatibility
- Included image dimensions (1024x1024) and alt text for better rendering
- Added og:type and og:site_name for richer previews
- Added Twitter Card metadata for better Twitter sharing
- Improved meta description for social sharing

--- a/space-tanks.html
+++ b/space-tanks.html
@@ -9,11 +9,18 @@
     <link rel="icon" type="image/png" href="images/space-tank-battle-icon.png">
     
     <!-- Social Media Preview -->
-    <meta property="og:title" content="Space Tank Battle">
-    <meta property="og:description" content="An exciting space tank battle game. Defeat enemy space-tanks and survive as long as you can!">
-    <meta property="og:image" content="images/space-tank-battle.png">
-    <meta property="og:url" content="https://robby3000.github.io/html-fun/space-tanks.html">
-    <meta name="twitter:card" content="summary_large_image">
+<meta property="og:image" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="1024">
+<meta property="og:image:alt" content="Space Tank Battle Game Screenshot">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Space Tank Battle">
+
+<!-- Twitter Card tags for better Twitter support -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:image" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
+<meta name="twitter:title" content="Space Tank Battle">
+<meta name="twitter:description" content="An exciting space tank battle game. Defeat enemy space-tanks and survive as long as you can!">
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <style>
