--- a/space-tanks.html
+++ b/space-tanks.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" href="images/space-tank-battle-icon.png">
     
     <!-- Social Media Preview -->
+<meta property="og:title" content="Space Tank Battle">
+<meta property="og:description" content="An exciting space tank battle game. Defeat enemy space-tanks and survive as long as you can!">
+<meta property="og:url" content="https://robby3000.github.io/html-fun/space-tanks.html">
 <meta property="og:image" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="1024">
