--- a/space-tanks.html
+++ b/space-tanks.html
@@ -12,14 +12,19 @@
 <meta property="og:title" content="Space Tank Battle">
 <meta property="og:description" content="An exciting space tank battle game. Defeat enemy space-tanks and survive as long as you can!">
 <meta property="og:url" content="https://robby3000.github.io/html-fun/space-tanks.html">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Space Tank Battle">
+<meta property="og:locale" content="en_US">
+
+<!-- Primary Meta Tags -->
 <meta property="og:image" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
+<meta property="og:image:secure_url" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="1024">
 <meta property="og:image:alt" content="Space Tank Battle Game Screenshot">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="Space Tank Battle">
+<meta property="og:image:type" content="image/png">
 
-<!-- Twitter Card tags for better Twitter support -->
+<!-- Twitter Card tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://robby3000.github.io/html-fun/images/space-tank-battle.png">
 <meta name="twitter:title" content="Space Tank Battle">
