--- a/space-tanks.html
+++ b/space-tanks.html
@@ -42,8 +42,8 @@
         }
         #game-container {
             position: absolute;
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            height: 100dvh;
         }
         #ui {
             position: absolute;
