change mistrel bug color

--- a/ant-trail-9.html
+++ b/ant-trail-9.html
@@ -298,7 +298,7 @@
                 <!-- Minstrel Bug SVG -->
                 <g id="minstrel" class="creature" transform="translate(0, 0) rotate(0)" style="display: none;">
                     <!-- Body (main shell) -->
-                    <ellipse cx="0" cy="0" rx="15" ry="12" fill="#E53935" />
+                    <ellipse cx="0" cy="0" rx="15" ry="12" fill="#fc9f0a" />
                     
                     <!-- Stripes -->
                     <path d="M-12,-8 L12,-8" stroke="black" stroke-width="2.5" />
