style: add padding to bottom of title section

--- a/ant-trail-10.html
+++ b/ant-trail-10.html
@@ -430,7 +430,7 @@
                 <option value="minstrel">Minstrel Bug</option>
             </select>
         </div>
-        <div class="settings-section">
+        <div class="settings-section" style="padding-bottom: 3rem;">
             <p style="font-size: 4rem; line-height: 0; font-weight: bold; font-family: serif; color: purple; text-shadow: 0 0 20px yellow;">ant</p>
             <p style="font-size: 4rem; line-height: 0; font-weight: bold; font-family: serif; color: purple; text-shadow: 0 0 20px yellow;">man</p>
             <p style="font-size: 4rem; line-height: 0; font-weight: bold; font-family: serif; color: purple; text-shadow: 0 0 20px yellow;">beep</p>
