--- a/space-tanks-2.html
+++ b/space-tanks-2.html
@@ -144,11 +144,11 @@
     </div>
     <div id="bullets-display" style="position: absolute; top: 40px; right: 10px; font-size: 24px; color: #CCCCCC; text-shadow: 0 0 10px #00FF00, 0 0 20px #00FF00;">20</div>
     <div id="controls">
-        <div class="control-btn" id="left-btn">←</div>
-        <div class="control-btn" id="fire-btn">FIRE</div>
-        <div class="control-btn" id="right-btn">→</div>
+        <div class="control-btn" id="left-btn">&lt;</div>
+        <div class="control-btn" id="fire-btn" style="background: rgba(255, 50, 50, 0.7);">FIRE</div>
+        <div class="control-btn" id="right-btn">&gt;</div>
     </div>
-    <div id="start-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; font-size: 24px; overflow-y: auto; padding: 20px; box-sizing: border-box; text-align: center;">
+    <div id="start-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgb(0, 0, 0); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; font-size: 24px; overflow-y: auto; padding: 20px; box-sizing: border-box; text-align: center; z-index: 1000;">
         <h1 style="margin: 0 0 30px 0; font-size: 28px; text-shadow: 0 0 10px #4CAF50; text-align: center; line-height: 1.4;">SPACE TANK BATTLE</h1>
         <img src="images/space-tank-battle-800.png" alt="Space Tank Battle Preview" style="max-width: 80%; max-height: 40vh; height: auto; border-radius: 5px; margin: 0 0 30px; border: 2px solid #4CAF50; box-shadow: 0 0 15px rgba(76, 175, 80, 0.5);">
         <button id="start-btn" style="margin-bottom: 20px; padding: 10px 30px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); font-family: 'Press Start 2P', cursive;">Start Game</button>
@@ -380,7 +380,9 @@
         });
         document.getElementById('fire-btn').addEventListener('touchstart', (e) => {
             e.preventDefault();
-            fireBullet();
+            if (!gameOver && gameStarted) {
+                fireBullet();
+            }
         });
 
         // Desktop controls
@@ -467,7 +469,7 @@
 }
 
 function fireBullet() {
-    if (gameOver) return;
+    if (gameOver || !gameStarted) return;
             
     // Check if player has bullets available
     if (bulletCount <= 0) {
