--- a/space-tanks-2.html
+++ b/space-tanks-2.html
@@ -149,7 +149,7 @@
         <div class="control-btn" id="right-btn">&gt;</div>
     </div>
     <div id="start-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgb(0, 0, 0); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; font-size: 24px; overflow-y: auto; padding: 20px; box-sizing: border-box; text-align: center; z-index: 1000;">
-        <h1 style="margin: 0 0 30px 0; font-size: 28px; text-shadow: 0 0 10px #4CAF50; text-align: center; line-height: 1.4;">SPACE TANK BATTLE</h1>
+        <h1 style="margin: 0 0 30px 0; font-size: 28px; text-shadow: 0 0 10px #4CAF50; text-align: center; line-height: 1.4;">SPACE ENTROPY DEFENSE</h1>
         <img src="images/space-tank-battle-800.png" alt="Space Tank Battle Preview" style="max-width: 80%; max-height: 40vh; height: auto; border-radius: 5px; margin: 0 0 30px; border: 2px solid #4CAF50; box-shadow: 0 0 15px rgba(76, 175, 80, 0.5);">
         <button id="start-btn" style="margin-bottom: 20px; padding: 10px 30px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); font-family: 'Press Start 2P', cursive;">Start Game</button>
         <button id="info-btn-start" style="padding: 5px 15px; font-size: 12px; background: rgba(255,255,255,0.2); color: white; border: none; border-radius: 5px; cursor: pointer; font-family: 'Press Start 2P', cursive;">info</button>
