reduce bonus point text size

--- a/space-tanks-2.html
+++ b/space-tanks-2.html
@@ -175,7 +175,7 @@
     <div id="game-over">
         <div style="margin-bottom: 20px;">GAME OVER</div>
         <div style="margin-bottom: 10px;">Score: <span id="game-over-score">0</span></div>
-        <div style="margin-bottom: 10px;">Bonus: 10 × <span id="bullets-remaining">0</span></div>
+        <div style="margin-bottom: 10px; font-size: 18px;">Bonus: 10 × <span id="bullets-remaining">0</span></div>
         <div style="margin-bottom: 30px;">Final Score:<br><span id="final-score" style="font-size: 28px; display: inline-block; margin-top: 10px;">0</span></div>
         <button id="restart-btn" style="margin-bottom: 20px;">Play Again</button>
         <button id="info-btn-gameover" style="padding: 5px 15px; font-size: 12px; background: rgba(255,255,255,0.2); color: white; border: none; border-radius: 5px; cursor: pointer; font-family: 'Press Start 2P', cursive;">info</button>
