--- a/space-entropy.html
+++ b/space-entropy.html
@@ -194,7 +194,7 @@
             <h2 style="margin-top: 0; font-size: 18px; margin-bottom: 15px; line-height: 1.4;">SPACE ENTROPY DEFENSE</h2>
             <img src="images/space-tank-battle-2-800.png" alt="Space Entropy Defense Preview" style="max-width: 100%; height: auto; border-radius: 5px; margin-bottom: 15px; border: 2px solid #4CAF50; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);">
             <p style="font-size: 12px; line-height: 1.8;">Engage in satisfyingly mindless destruction of enemy spaceships. Achieve a Zen-like flow state by mowing down a constant onslaught of dangerous aliens. </p>
-            <p style="font-size: 12px; line-height: 1.8;">You are the last defense against the hordes of the Galactic Overlords.  If you fail, entropy will rise to maximum resulting in the heat death of the universe.</p>
+            <p style="font-size: 12px; line-height: 1.8;">You are the last defense against the hordes of the Galactic Overlords.  If you fail, entropy will rise to maximum - resulting in the heat death of the universe 😭</p>
             <p style="font-size: 12px; line-height: 1.8;">Shoot down the enemy spaceships. Keep an eye on your laser cannon count at the top right, you get 2 more shots with every enemy spaceship that spawns. </p>
             <p style="font-size: 12px; line-height: 1.8;">The goal is to use this game as mind training therapy, and to be an extreme badass space hero. The continued existence of the universe is all down to your skill. </p>
             <p style="font-size: 12px; line-height: 1.8; margin-bottom: 20px;">Good luck!</p>
