changed z indes=x of info modal to bring it tothe front, places info button centered

--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -108,7 +108,7 @@
             left: 0; 
             width: 100%; 
             height: 100%; 
-            background: rgba(0,0,0,0.92); /* Slightly more opaque */
+            background: rgba(0,0,0,0.7); /* Slightly les opaque */
             z-index: 1000; 
             flex-direction: column; 
             justify-content: center; 
@@ -121,8 +121,7 @@
         }
         #leaderboardScreen .info-button-leaderboard {
             position: absolute;
-            top: 15px;
-            right: 15px;
+            top: 50px;
             padding: 5px 10px;
             font-size: 0.8em;
             background: rgba(255,255,255,0.15);
@@ -317,7 +316,7 @@
     
     <!-- Old game-over div removed -->
     
-    <div id="info-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); z-index: 1000; justify-content: center; align-items: flex-start; overflow-y: auto; padding-top: 10vh;">
+    <div id="info-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.9); z-index: 2000; justify-content: center; align-items: flex-start; overflow-y: auto; padding-top: 10vh;">
         <div style="background: rgba(50, 50, 80, 0.9); padding: 20px; border-radius: 10px; max-width: 500px; width: 90%; margin: 0 auto 20vh; text-align: center; color: white; position: relative; box-sizing: border-box;">
             <h2 style="margin-top: 0; font-size: 18px; margin-bottom: 15px; line-height: 1.4;">SPACE ENTROPY DEFENSE</h2>
             <img src="images/space-tank-battle-2-800.png" alt="Space Entropy Defense Preview" style="max-width: 100%; height: auto; border-radius: 5px; margin-bottom: 15px; border: 2px solid #4CAF50; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);">
