--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -126,7 +126,7 @@
             font-size: 0.8em;
             background: rgba(255,255,255,0.15);
             color: white;
-            border: 1px solid rgba(255,255,255,0.3);
+            border: 1px solid rgba(255, 55, 55, 0.76);
             border-radius: 5px;
             cursor: pointer;
             font-family: 'Press Start 2P', cursive;
@@ -1582,8 +1582,8 @@ document.addEventListener('DOMContentLoaded', function() {
     
     <div id="high-score-form" style="display: none;">
         <p>Enter your name (max 5 chars):</p>
-        <div style="display: flex; justify-content: center; align-items: center; margin-top: 8px;">
-            <input type="text" id="player-name" maxlength="5">
+        <div style="display: flex; justify-content: center; align-items: center; margin-top: 18px;">
+            <input type="text" id="player-name" maxlength="5" style="padding: 5px; width: 120px;">
             <button id="submit-score-btn" style="margin-left: 10px;">Submit</button>
         </div>
     </div>
