changes leaderboardScreen to min-height 100 vh

--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -107,8 +107,8 @@
             top: 0; 
             left: 0; 
             width: 100%; 
-            height: 100%; 
-            background: rgba(0,0,0,0.7); /* Slightly les opaque */
+            min-height: 100vh; 
+            background: rgba(0,0,0,0.75); /* Slightly les opaque */
             z-index: 1000; 
             flex-direction: column; 
             justify-content: center; 
