leaderboardScreen justify-content: flex-start;

--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -111,7 +111,7 @@
             background: rgba(0,0,0,0.75); /* Slightly les opaque */
             z-index: 1000; 
             flex-direction: column; 
-            justify-content: center; 
+            justify-content: flex-start; 
             align-items: center; 
             color: white; 
             font-family: 'Press Start 2P', cursive;
