--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -40,7 +40,8 @@
         body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            /*overflow: hidden;*/
+            overflow:auto;
             background: #000;
             touch-action: none;
             font-family: 'Press Start 2P', cursive;
