--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -40,8 +40,7 @@
         body {
             margin: 0;
             padding: 0;
-            /*overflow: hidden;*/
-            overflow:auto;
+            overflow: hidden;
             background: #000;
             touch-action: none;
             font-family: 'Press Start 2P', cursive;
@@ -192,10 +191,6 @@
             padding: 4px; /* Reduced */
             font-size: 0.8em; /* Reduced */
         }
-        #leaderboardScreen #leaderboard-list {
-    height: 2500px; /* Or any very large value */
-    background-color: rgba(0, 0, 255, 0.2); /* Optional: to see its bounds */
-}
         #leaderboardScreen #play-again-btn {
             padding: 8px 18px; /* Reduced */
             font-size: 1em; /* Reduced */
