text transform to uppercase in form input for high scores

--- a/space-entropy-3-backup-3.html
+++ b/space-entropy-3-backup-3.html
@@ -1602,7 +1602,7 @@ document.addEventListener('DOMContentLoaded', function() {
             <div id="high-score-form" style="display: none;">
                 <p>Enter your name (max 5 chars):</p>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 18px;">
-                    <input type="text" id="player-name" maxlength="5" style="padding: 5px; width: 120px;">
+                    <input type="text" id="player-name" maxlength="5" style="padding: 5px; width: 120px; text-transform: uppercase;">
                     <button id="submit-score-btn" style="margin-left: 10px;">Submit</button>
                 </div>
             </div>
