--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -65,8 +65,8 @@
             bottom: 0; /* Aligns to the bottom of #game-container */
             left: 50%;
             transform: translateX(-50%); /* Center the container */
-            width: 80vw; /* Responsive width */
-            max-width: 600px; /* Max width for readability on large screens */
+            width: 95vw; /* Further increased responsive width */
+            max-width: 1200px; /* Increased max width */
             height: 75vh; /* Define the vertical space for the perspective effect */
             perspective: 450px; /* Adjust for more or less dramatic perspective */
             overflow: hidden; /* Crucial: hides the text before it enters and after it leaves */
@@ -83,7 +83,7 @@
             text-align: justify; /* Classic crawl text alignment */
             color: #ffc070; /* Requested text color */
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* Common, readable sans-serif */
-            font-size: clamp(16px, 3.5vw, 28px); /* Responsive font size within reasonable limits */
+            font-size: clamp(30px, 6vw, 50px); /* Even bigger responsive font size */
             font-weight: bold;
             line-height: 1.6; /* Spacing between lines */
             transform-origin: 50% 100%; /* Rotate around bottom-center for the perspective effect */
