adds content left: -15%;             width: 130%;            (-15% to compensate for shift in center of the 130% container)

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -79,7 +79,8 @@
         #star-wars-crawl-content {
             position: absolute;
             top: 100%; /* Start fully below the container's visible area */
-            width: 125%; /* Pushing content width further */
+            left: -15%;
+            width: 130%; /* Pushing content width further */
             text-align: justify; /* Classic crawl text alignment */
             color: #ffc070; /* Requested text color */
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* Common, readable sans-serif */
