font size a bit smaller

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -84,7 +84,7 @@
             text-align: justify; /* Classic crawl text alignment */
             color: #ffc070; /* Requested text color */
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* Common, readable sans-serif */
-            font-size: clamp(40px, 8vw, 80px); /* Even bigger responsive font size */
+            font-size: clamp(30px, 6vw, 60px); /* bigger responsive font size */
             font-weight: bold;
             line-height: 1.6; /* Spacing between lines */
             transform-origin: 50% 100%; /* Rotate around bottom-center for the perspective effect */
