i am happy with the animation now

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -1704,7 +1704,7 @@ document.addEventListener('DOMContentLoaded', () => {
     window.crawlHasPlayed = false; // Global flag, accessible from your game logic
 
     // Shortened placeholder text for the crawl
-    const placeholderCrawlText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam (147)";
+    const placeholderCrawlText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. (almost 500)";
 
     window.startStarWarsCrawl = function() {
         if (!crawlContainer || !crawlContent) {
@@ -1721,7 +1721,7 @@ document.addEventListener('DOMContentLoaded', () => {
         crawlContainer.style.display = 'block';
 
         // --- Fixed Animation Duration --- 
-        const fixedAnimationDurationSeconds = 25.0; // All crawls will take 25 seconds
+        const fixedAnimationDurationSeconds = 35.0; // All crawls will take 35 seconds
 
         console.log(`Applying fixed animation duration: ${fixedAnimationDurationSeconds.toFixed(2)}s`);
 
